--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~4.4.0",
     "dotenv": "^16.4.7",
     "ecdsa-sig-formatter": "^1.0.11",
+    "expo-server-sdk": "^3.14.0",
     "express": "^4.21.2",
     "formidable": "^3.5.2",
     "http-errors": "^2.0.0",
@@ -26,6 +27,7 @@
     "mongoose-paginate": "^5.0.3",
     "morgan": "~1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "to": "^0.2.9",
